plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.co'
version = '0.0.1-SNAPSHOT'
description = 'Restaurant api'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//Core Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter'
	//REST API
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//Validation DTO
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//PostgreSQL
	runtimeOnly 'org.postgresql:postgresql'
	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	//MapStruct
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	//Lombok
	compileOnly 'org.projectlombok:lombok'
	//Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	//RabbitMQ
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

	// Orden crítico: Lombok → binding → MapStruct
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
